--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BackendEksamen
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/backendeksamen
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/firedb
 spring.datasource.username=bob
 spring.datasource.password=x
 
